--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   </li>
 
                   <li class="">
-                    <a href="javascript:void(0);">Contact</a>
+                    <a href="contact_us_1.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -1053,7 +1053,7 @@
         </div>
       </div>
     </section>
-
+<!-- 
     <section class="commonSection testimonialSection">
       <div class="container">
         <div class="row">
@@ -1185,7 +1185,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="commonSection clientSecion">
       <div class="container">
