--- a/contact_us_1.html
+++ b/contact_us_1.html
@@ -46,8 +46,9 @@
         <div></div>
       </div>
     </div>
-    
+
     <!-- Preloading -->
+
     <section class="topbar">
       <div class="header-container">
         <div class="row">
@@ -70,7 +71,7 @@
                 <h5>Phone Number</h5>
                 <p>+234 803 340 3169</p>
               </div>
-             
+
               <div class="topbar_element settings_bar">
                 <a href="#" class="hamburger" id="open-overlay-nav"
                   ><i class="fal fa-bars"></i
@@ -101,48 +102,29 @@
               <div class="dl-menu__wrap dl-menuwrapper">
                 <ul class="dl-menu dl-menuopen">
                   <li class="current-menu-item">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                     <!--  -->
                   </li>
                   <li><a href="aboutus.html">About</a></li>
                   <li class="">
-                    <a href="service_2.html">Services</a>
+                    <a href="#">Services</a>
                     <!--  -->
                   </li>
                   <li class="">
-                    <a href="javascript:void(0);">Projects</a>
+                    <a href="service_details.html">Projects</a>
                     <!--  -->
                   </li>
 
                   <li class="">
-                    <a href="javascript:void(0);">Contact</a>
+                    <a href="contact_us_1.html">Contact</a>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6 col-sm-6 col-xs-12 text-left">
-            <ul class="footer__contacts">
-              <li>Phone: +1 (00) 123-45-67</li>
-              <li>Email: needhelp@yoox.com</li>
-              <li>Address: 666 Road Broklyn Street, 88 New York, USA</li>
-            </ul>
-          </div>
-          <div class="col-lg-6 col-sm-6 col-xs-12 col-xs-12">
-            <div class="foo_social popUp_social text-right">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-behance"></i></a>
-              <a href="#"><i class="fab fa-pinterest"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
-    <!-- /Overlay Menu --
 
     <section class="page_banner contact_banner">
       <div class="container">
