Added content to service page

--- a/service_details.html
+++ b/service_details.html
@@ -127,7 +127,7 @@
 
     <!-- /Overlay Menu -->  
 
-    <section class="page_banner">
+    <section class="page_banner service_banner">
       <div class="container">
         <div class="col-xl-12 text-center">
           <h2>Service Details</h2>
