--- a/project_6.html
+++ b/project_6.html
@@ -48,7 +48,7 @@
     </div>
     <!-- Preloading -->
 
-     <section class="topbar">
+    <section class="topbar">
       <div class="header-container">
         <div class="row">
           <div class="col-xl-4 col-lg-4 col-md-3 noPadding">
@@ -82,7 +82,7 @@
       </div>
     </section>
 
-     <section class="nav_bar" id="fix_nav">
+    <section class="nav_bar" id="fix_nav">
       <div class="header-container">
         <div class="row">
           <div class="col-xl-8 col-lg-9">
@@ -120,8 +120,6 @@
       </div>
       <span class="right_bgs"></span>
     </section>
-
-
 
     <!-- Overlay Menu -->
     <div class="popup popup__menu">
@@ -166,7 +164,7 @@
       </div>
     </div>
 
-    <!-- /Overlay Menu -->  
+    <!-- /Overlay Menu -->
 
     <section class="page_banner service_banner">
       <div class="container">
@@ -183,13 +181,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-12">
-
-            <!-- ================  01 ================= -->
+            <!-- ================  03 ================= -->
             <div class="service_details_area">
               <div class="sda_cates">
-                <a href="#">Industrial</a>
+                <a href="#">High Voltage Panels, Motors and Alternators</a>
               </div>
-              <h2 class="entry_title">HVAC and Fabrication Works</h2>
+              <h2 class="entry_title">Electrical HV / LV</h2>
               <div class="sda_gall">
                 <div class="row">
                   <div class="col-lg-12 col-md-12">
@@ -211,37 +208,24 @@
               </div>
               <div class="sda_content">
                 <p>
-                  The AKPO Expansion Tanks Rehabilitation Project executed by
-                  EST resolved the the problem of rust in the HVAC chilled water
-                  circuits. The rust and consequential murky waters were caused
-                  by dissolved air, used in pressurising the replaced tanks.
-                  More so, the nuisance popping of pressure relief valves (PRVs)
-                  due to pressure build up was mitigated with the bladder lined
-                  expansion tanks introduced for the essential, nonessential and
-                  topside HVAC chilled water circuits.
+                  We have constructed more than 100 high voltage (33kV and 11kV)
+                  transformer substations over the years for various
+                  applications ranging from 50kVA to 7.5MVA stations.
                 </p>
                 <p class="lead_content">
-                  The project scope included extensive welding, fabrication and
-                  piping operations in hazardous zone classified areas, and we
-                  safely achieved a number of firsts for the FPSO 
-                  <ul>
-                      <li> Welding on chilled water line</li>
-                      <li> Hot tapping operations on process lines</li>
-                      <li> Pipe freezing of the process line using CO2</li>
-                </ul>
-                    
+                  We have constructed more than 100 high voltage (33kV and 11kV)
+                  transformer substations over the years for various
+                  applications ranging from 50kVA to 7.5MVA stations.
                 </p>
                 <p>
-                  In conjunction with our technical associates: HVAC & Refrigeration Engineering Ltd and Thermoplant Offshore Services UK, EST is able to provide expert HVAC solutions for industrial and commercial applications. Our service offering spans from manufacturing of offshore and marine HVAC units to the provision of maintenance services, support and critical spares.
+                  In partnership with Boardman Transformers, we deliver
+                  specialist transformers/coils for offshore applications and
+                  ROVs
                 </p>
-              
               </div>
             </div>
-
-
-
           </div>
-           <div class="col-lg-4 col-md-6 sidebar_1">
+          <div class="col-lg-4 col-md-6 sidebar_1">
             <aside class="widget">
               <h3 class="widget_title">Our Services</h3>
               <ul>
