--- a/contact_us_1.html
+++ b/contact_us_1.html
@@ -83,6 +83,45 @@
       </div>
     </section>
 
+    <section class="nav_bar" id="fix_nav">
+      <div class="header-container">
+        <div class="row">
+          <div class="col-xl-8 col-lg-9">
+            <div class="mobileMenuBar">
+              <a href="javascript: void(0);"
+                ><span>Menu</span><i class="fa fa-bars"></i
+              ></a>
+            </div>
+            <nav class="mainmenu">
+              <ul>
+                <li class="">
+                  <a href="/">Home</a>
+                </li>
+                <li><a href="aboutus.html">About</a></li>
+                <li class="">
+                  <a href="project_2.html">Projects</a>
+                </li>
+
+                <li class="current-menu-item"">
+                  <a href="#">Contact</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-xl-4 col-lg-3">
+            <div class="top_social text-right">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-behance"></i></a>
+              <a href="#"><i class="fab fa-pinterest"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <span class="right_bgs"></span>
+    </section>
+
     <!-- Overlay Menu -->
     <div class="popup popup__menu">
       <div class="header-container mobileContainer">
@@ -111,7 +150,7 @@
                     <!--  -->
                   </li>
                   <li class="">
-                    <a href="service_details.html">Projects</a>
+                    <a href="project_2.html">Projects</a>
                     <!--  -->
                   </li>
 
