--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Industing - Industry & Factory Business HTML5 Template</title>
+    <title>EST ENERGY NG</title>
     <meta name="viewport" content="width=device-width" />
 
     <!-- Include All CSS here-->
@@ -144,10 +144,7 @@
                     <!--  -->
                   </li>
                   <li><a href="aboutus.html">About</a></li>
-                  <li class="">
-                    <a href="#">Services</a>
-                    <!--  -->
-                  </li>
+                 
                   <li class="">
                     <a href="project_2.html">Projects</a>
                     <!--  -->
@@ -368,56 +365,7 @@
       </div>
     </section>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-12 clearfix">
-            <div class="history_box">
-              <h5>2000</h5>
-              <div class="hisbar"></div>
-              <span>Start Journey</span>
-              <h3>Introduce New Technology</h3>
-              <p>
-                These cases are perfectly simple and easy to distinguish. In a
-                free hour, is when all our power of choice.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-            <div class="history_box">
-              <h5>2005</h5>
-              <div class="hisbar"></div>
-              <span>Reached</span>
-              <h3>Reached 500 Projects Milestone</h3>
-              <p>
-                These cases are perfectly simple and easy to distinguish. In a
-                free hour, is when all our power of choice.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-            <div class="history_box">
-              <h5>2010</h5>
-              <div class="hisbar"></div>
-              <span>Opening Office</span>
-              <h3>Open New Branch at Boston</h3>
-              <p>
-                These cases are perfectly simple and easy to distinguish. In a
-                free hour, is when all our power of choice.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-            <div class="history_box">
-              <h5>2019 - Present</h5>
-              <div class="hisbar"></div>
-              <span>Awards</span>
-              <h3>Got Best Manufacturer Award 2019</h3>
-              <p>
-                These cases are perfectly simple and easy to distinguish. In a
-                free hour, is when all our power of choice.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      
     </section>
      -->
 
