--- a/project_2.html
+++ b/project_2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Industing - Industry & Factory Business HTML5 Template</title>
+    <title>EST ENERGY NG</title>
     <meta name="viewport" content="width=device-width" />
 
     <!-- Include All CSS here-->
@@ -63,23 +63,14 @@
               <div class="topbar_element info_element">
                 <i class="fa fa-envelope"></i>
                 <h5>Email Address</h5>
-                <p><a href="mailto:info@webmail.com">info@webmail.com</a></p>
+                <p><a href="mailto:info@estng.com">info@estng.com</a></p>
               </div>
               <div class="topbar_element info_element">
                 <i class="fa fa-phone"></i>
                 <h5>Phone Number</h5>
-                <p>+897 (676) 56 675 7</p>
+                <p>+234 803 340 3169</p>
               </div>
-              <div class="topbar_element search_element">
-                <form method="get" action="#">
-                  <i class="fa fa-search"></i>
-                  <input
-                    type="search"
-                    name="s"
-                    placeholder="Search keyword..."
-                  />
-                </form>
-              </div>
+
               <div class="topbar_element settings_bar">
                 <a href="#" class="hamburger" id="open-overlay-nav"
                   ><i class="fal fa-bars"></i
@@ -105,12 +96,12 @@
                 <li class="">
                   <a href="/">Home</a>
                 </li>
-                <li><a href="aboutus.html">About</a></li>
-                <li class="current-menu-item">
-                  <a href="#">Projects</a>
+                <li class="current-menu-item"><a href="#">About</a></li>
+                <li class="menu-item-has-children">
+                  <a href="project_2.html">Projects</a>
                 </li>
 
-                <li class="">
+                <li class="menu-item-has-children">
                   <a href="contact_us_1.html">Contact</a>
                 </li>
               </ul>
@@ -148,140 +139,32 @@
             <div class="popup-inner">
               <div class="dl-menu__wrap dl-menuwrapper">
                 <ul class="dl-menu dl-menuopen">
-                  <li class="current-menu-item menu-item-has-children">
-                    <a href="#">Home</a>
-                    <ul class="dl-submenu">
-                      <li><a href="index.html">Home Version 01</a></li>
-                      <li><a href="index_2.html">Home Version 02</a></li>
-                    </ul>
+                  <li class="current-menu-item">
+                    <a href="index.html">Home</a>
+                    <!--  -->
                   </li>
                   <li><a href="aboutus.html">About</a></li>
-                  <li class="menu-item-has-children">
-                    <a href="javascript:void(0);">Services</a>
-                    <ul class="dl-submenu">
-                      <li class="menu-item-has-children">
-                        <a href="javascript:void(0);">Service Pages</a>
-                        <ul class="dl-submenu">
-                          <li><a href="service_1.html">Service 01</a></li>
-                          <li><a href="service_2.html">Service 02</a></li>
-                          <li><a href="service_3.html">Service 03</a></li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="service_details.html">Service Details</a>
-                      </li>
-                    </ul>
+
+                  <li class="">
+                    <a href="project_2.html">Projects</a>
+                    <!--  -->
                   </li>
-                  <li class="menu-item-has-children">
-                    <a href="javascript:void(0);">Projects</a>
-                    <ul class="dl-submenu">
-                      <li class="menu-item-has-children">
-                        <a href="javascript:void(0);">Project Lists</a>
-                        <ul class="dl-submenu">
-                          <li><a href="project_1.html">Project 01</a></li>
-                          <li><a href="project_2.html">Project 02</a></li>
-                          <li><a href="project_3.html">Project 03</a></li>
-                          <li><a href="project_4.html">Project 04</a></li>
-                        </ul>
-                      </li>
-                      <li class="menu-item-has-children">
-                        <a href="javascript:void(0);">Project Details</a>
-                        <ul class="dl-submenu">
-                          <li>
-                            <a href="project_details_1.html">Details 01</a>
-                          </li>
-                          <li>
-                            <a href="project_details_2.html">Details 02</a>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="javascript:void(0);">News</a>
-                    <ul class="dl-submenu">
-                      <li class="menu-item-has-children">
-                        <a href="javascript:void(0);">News Lists</a>
-                        <ul class="dl-submenu">
-                          <li><a href="news_list_1.html">News List 01</a></li>
-                          <li><a href="news_list_2.html">News List 02</a></li>
-                        </ul>
-                      </li>
-                      <li class="menu-item-has-children">
-                        <a href="javascript:void(0);">News Details</a>
-                        <ul class="dl-submenu">
-                          <li><a href="news_details_1.html">Details 01</a></li>
-                          <li><a href="news_details_2.html">Details 02</a></li>
-                          <li><a href="news_details_3.html">Details 03</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="javascript:void(0);">Shop</a>
-                    <ul class="dl-submenu">
-                      <li class="menu-item-has-children">
-                        <a href="javascript:void(0);">Shop Pages</a>
-                        <ul class="dl-submenu">
-                          <li><a href="shop_1.html">Shop 01</a></li>
-                          <li><a href="shop_2.html">Shop 02</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="shop_details.html">Product Details</a></li>
-                      <li class="menu-item-has-children">
-                        <a href="javascript:void(0);">Other Pages</a>
-                        <ul class="dl-submenu">
-                          <li><a href="cart.html">Cart Page</a></li>
-                          <li><a href="checkout.html">Checkout Page</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="javascript:void(0);">Contact</a>
-                    <ul class="dl-submenu">
-                      <li><a href="contact_us_1.html">Contact Us 01</a></li>
-                      <li><a href="contact_us_2.html">Contact Us 02</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="javascript:void(0);">Pages</a>
-                    <ul class="dl-submenu">
-                      <li><a href="team.html">Team Page</a></li>
-                      <li><a href="404.html">404 Page</a></li>
-                    </ul>
+
+                  <li class="">
+                    <a href="contact_us_1.html">Contact</a>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6 col-sm-6 col-xs-12 text-left">
-            <ul class="footer__contacts">
-              <li>Phone: +1 (00) 123-45-67</li>
-              <li>Email: needhelp@yoox.com</li>
-              <li>Address: 666 Road Broklyn Street, 88 New York, USA</li>
-            </ul>
-          </div>
-          <div class="col-lg-6 col-sm-6 col-xs-12 col-xs-12">
-            <div class="foo_social popUp_social text-right">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-behance"></i></a>
-              <a href="#"><i class="fab fa-pinterest"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
-    <!-- /Overlay Menu -->
 
-    <section class="page_banner">
+    <section class="page_banner project_banner">
       <div class="container">
         <div class="col-xl-12 text-center">
-          <h2>Project 02</h2>
+          <h2>Projects</h2>
           <div class="breadcrumbs">
             <a href="index.html">Home</a><i>|</i><span>Projects</span>
           </div>
@@ -291,28 +174,7 @@
 
     <section class="commonSection projectPage">
       <div class="header-container">
-        <div class="row">
-          <!-- <div class="col-xl-12">
-            <div class="filterMenu emptyStyle">
-              <ul class="text-center clearfix shafful_filter">
-                <li class="active" data-group="all">
-                  <i class="far fa-bars"></i>All Cases
-                </li>
-                <li data-group="oil_gas">
-                  <i class="fal fa-fire-smoke"></i>Oil & Gas
-                </li>
-                <li data-group="construction">
-                  <i class="far fa-fist-raised"></i>Construction
-                </li>
-                <li data-group="chemicel">
-                  <i class="fal fa-sun-dust"></i>Chemicel
-                </li>
-                <li data-group="housing"><i class="fal fa-home"></i>Housing</li>
-                <li data-group="garden"><i class="fal fa-leaf"></i>Garden</li>
-              </ul>
-            </div>
-          </div> -->
-        </div>
+        <div class="row"></div>
         <div class="row">
           <div class="col-xl-12">
             <div class="row" id="shafulls">
@@ -321,7 +183,7 @@
                 data-groups='["all", "construction", "housing"]'
               >
                 <div class="singleFolio_03 text-left">
-                  <img src="images/works/21.jpg" alt="" />
+                  <img src="images/hvac/banner.jpg" alt="" />
                   <div class="folioHover_03">
                     <h2>HVAC and Fabrication Works</h2>
                     <a class="mores" href="service_details.html"></a>
@@ -333,10 +195,10 @@
                 data-groups='["all", "chemicel", "garden"]'
               >
                 <div class="singleFolio_03 text-left">
-                  <img src="images/works/22.jpg" alt="" />
+                  <img src="images/thermal/3.webp" alt="" />
                   <div class="folioHover_03">
                     <h2>Thermal Imaging</h2>
-                    <a class="mores" href="service_details.html"></a>
+                    <a class="mores" href="project_5.html"></a>
                   </div>
                 </div>
               </div>
@@ -345,10 +207,10 @@
                 data-groups='["all", "oil_gas", "construction"]'
               >
                 <div class="singleFolio_03 text-left">
-                  <img src="images/works/23.jpg" alt="" />
+                  <img src="images/hvlv/banner.jpg" alt="" />
                   <div class="folioHover_03">
                     <h2>Electrical HV / LV</h2>
-                    <a class="mores" href="service_details.html"></a>
+                    <a class="mores" href="project_6.html"></a>
                   </div>
                 </div>
               </div>
