--- a/contact_us_1.html
+++ b/contact_us_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Industing - Industry & Factory Business HTML5 Template</title>
+    <title>EST ENERGY NG</title>
     <meta name="viewport" content="width=device-width" />
 
     <!-- Include All CSS here-->
@@ -145,10 +145,7 @@
                     <!--  -->
                   </li>
                   <li><a href="aboutus.html">About</a></li>
-                  <li class="">
-                    <a href="#">Services</a>
-                    <!--  -->
-                  </li>
+                  
                   <li class="">
                     <a href="project_2.html">Projects</a>
                     <!--  -->
