--- a/project_6.html
+++ b/project_6.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Industing - Industry & Factory Business HTML5 Template</title>
+    <title>EST ENERGY NG</title>
     <meta name="viewport" content="width=device-width" />
 
     <!-- Include All CSS here-->
@@ -144,10 +144,7 @@
                     <!--  -->
                   </li>
                   <li><a href="aboutus.html">About</a></li>
-                  <li class="">
-                    <a href="#">Services</a>
-                    <!--  -->
-                  </li>
+
                   <li class="">
                     <a href="project_2.html">Projects</a>
                     <!--  -->
@@ -166,7 +163,7 @@
 
     <!-- /Overlay Menu -->
 
-    <section class="page_banner service_banner">
+    <section class="page_banner hvlv_banner">
       <div class="container">
         <div class="col-xl-12 text-center">
           <h2>Project Details</h2>
@@ -191,17 +188,17 @@
                 <div class="row">
                   <div class="col-lg-12 col-md-12">
                     <div class="sda_gl">
-                      <img src="images/services/d1.jpg" alt="" />
+                      <img src="images/hvlv/1.jpeg" alt="" />
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-6">
-                    <div class="sda_gl">
-                      <img src="images/services/d2.jpg" alt="" />
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/2.jpg" alt="" />
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-6">
-                    <div class="sda_gl">
-                      <img src="images/services/d3.jpg" alt="" />
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/3.jpg" alt="" />
                     </div>
                   </div>
                 </div>
@@ -340,67 +337,31 @@
     <footer class="footer_01">
       <div class="container">
         <div class="row">
-          <div class="col-xl-3 col-md-6 col-lg-3 noPaddingRight">
+          <div class="col-xl-4 col-md-6 col-lg-4 noPaddingRight">
             <aside class="widget">
               <div class="about_widget">
                 <a href="index.html"><img src="images/logo_2.png" alt="" /></a>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
+
                 <div class="caller">
                   <i class="fal fa-headphones"></i>
-                  <span>Talk to Our Officers</span>
-                  <h3>+1 001-765-4321</h3>
+                  <span>Talk to us now</span>
+                  <h3>+234 803 340 3169</h3>
                 </div>
               </div>
             </aside>
           </div>
-          <div class="col-xl-2 col-md-6 col-lg-2 pdl45 noPaddingRight">
+          <div class="col-xl-4 col-md-6 col-lg-4 pdl45 noPaddingRight">
             <aside class="widget">
               <h3 class="widget_title">Important Links<span>.</span></h3>
               <ul>
                 <li><a href="#">About Company</a></li>
                 <li><a href="#">Latest Projects</a></li>
-                <li><a href="#">Latest From Blog</a></li>
-                <li><a href="#">Our Testimonials</a></li>
-                <li><a href="#">Our Mission</a></li>
                 <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Get a Quot</a></li>
               </ul>
             </aside>
           </div>
-          <div class="col-xl-4 col-md-6 col-lg-4 pdl65">
-            <aside class="widget">
-              <h3 class="widget_title">Our Services<span>.</span></h3>
-              <div class="recentServices">
-                <div class="serviceItem clearfix">
-                  <img class="float-left" src="images/widget/1.jpg" alt="" />
-                  <h5>
-                    <a href="#">Lorem ipsum dolor sit am et, consectetur.</a>
-                  </h5>
-                  <span>14 Jnauary, 2019</span>
-                </div>
-                <div class="serviceItem clearfix">
-                  <img class="float-left" src="images/widget/2.jpg" alt="" />
-                  <h5>
-                    <a href="#">Lorem ipsum dolor sit am et, consectetur.</a>
-                  </h5>
-                  <span>19 February, 2019</span>
-                </div>
-                <div class="serviceItem clearfix">
-                  <img class="float-left" src="images/widget/3.jpg" alt="" />
-                  <h5>
-                    <a href="#">Lorem ipsum dolor sit am et, consectetur.</a>
-                  </h5>
-                  <span>14 July, 2018</span>
-                </div>
-              </div>
-            </aside>
-          </div>
-          <div class="col-xl-3 col-md-6 col-lg-3">
+
+          <div class="col-xl-4 col-md-6 col-lg-4">
             <aside class="widget subscribe_widget">
               <h3 class="widget_title">Subscribe Now<span>.</span></h3>
               <div class="subscribForm">
@@ -433,7 +394,7 @@
         <div class="row">
           <div class="col-xl-12">
             <div class="siteinfo">
-              Copyright By &COPY;<a href="#">ThemeWar</a> - 2019
+              Copyright &COPY;<a href="#">EST Energy</a> - 2022
             </div>
           </div>
         </div>
