--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
               <div class="topbar_element info_element">
                 <i class="fa fa-phone"></i>
                 <h5>Phone Number</h5>
-                <p>+234 803 340 3169</p>
+                <p>+234 907 700 7787
+</p>
               </div>
 
               <div class="topbar_element settings_bar">
@@ -323,7 +324,7 @@
                 data-paddingleft="[0,0,0,0]"
                 style="z-index: 5; white-space: nowrap; text-transform: none"
               >
-                <a href="#" class="ind_btn"><span>Let's Begin</span></a>
+                <a href="/contact_us_1.html" class="ind_btn"><span>Let's Begin</span></a>
               </div>
             </li>
             <li
@@ -478,7 +479,7 @@
                 data-paddingleft="[0,0,0,0]"
                 style="z-index: 5; white-space: nowrap; text-transform: none"
               >
-                <a href="#" class="ind_btn"><span>Let's Begin</span></a>
+                <a href="/contact_us_1.html" class="ind_btn"><span>Let's Begin</span></a>
               </div>
             </li>
             <li
@@ -633,7 +634,7 @@
                 data-paddingleft="[0,0,0,0]"
                 style="z-index: 5; white-space: nowrap; text-transform: none"
               >
-                <a href="#" class="ind_btn"><span>Let's Begin</span></a>
+                <a href="/contact_us_1.html" class="ind_btn"><span>Let's Begin</span></a>
               </div>
             </li>
           </ul>
@@ -692,7 +693,7 @@
               <span></span>
               <h3>Telecommunication</h3>
               <p>
-                At Est energy, we offer voice and data services over a large area by local telephone, local exchange
+                At EST energy, we offer voice and data services over a large area by local telephone, local exchange
 carriers and wireless communication services
               </p>
             </div>
@@ -1008,7 +1009,7 @@ more
                 solutions, supporting our clients through project life cycle -
                 design, procurement, installation and maintenance.
               </p>
-              <a href="#" class="ind_btn"><span>Let's Begin</span></a>
+              <a href="/contact_us_1.html" class="ind_btn"><span>Let's Begin</span></a>
             </div>
           </div>
         </div>
@@ -1162,18 +1163,19 @@ more
             <div class="clientSlider owl-carousel">
               <div class="csItem">
                 <a href="#">
-                  <img src="images/clients/1.png" alt="" />
+                  <img src="images/clients/1.jpg" alt="" />
                 </a>
               </div>
 
               <div class="csItem">
                 <a href="#">
-                  <img src="images/clients/3.png" alt="" />
+                  <img src="images/clients/2.jpg" alt="" />
                 </a>
               </div>
               <div class="csItem">
                 <a href="#">
-                  <img src="images/clients/2.png" alt="" />
+                  <img src="images/clients/6.jpg" alt="" />
+                  
                 </a>
               </div>
               <div class="csItem">
@@ -1183,12 +1185,32 @@ more
               </div>
               <div class="csItem">
                 <a href="#">
-                  <img src="images/clients/5.png" alt="" />
+                  <img src="images/clients/5.jpg" alt="" />
                 </a>
               </div>
               <div class="csItem">
                 <a href="#">
-                  <img src="images/clients/6.png" alt="" />
+                  <img src="images/clients/3.jpg" alt="" />
+                </a>
+              </div>
+              <div class="csItem">
+                <a href="#">
+                  <img src="images/clients/7.png" alt="" />
+                </a>
+              </div>
+              <div class="csItem">
+                <a href="#">
+                  <img src="images/clients/8.jpg" alt="" />
+                </a>
+              </div>
+              <div class="csItem">
+                <a href="#">
+                  <img src="images/clients/9.jpg" alt="" />
+                </a>
+              </div>
+              <div class="csItem">
+                <a href="#">
+                  <img src="images/clients/10.png" alt="" />
                 </a>
               </div>
             </div>
@@ -1214,7 +1236,8 @@ more
                 <div class="caller">
                   <i class="fal fa-headphones"></i>
                   <span>Talk to us now</span>
-                  <h3>+234 803 340 3169</h3>
+                  <h3>+234 907 700 7787
+</h3>
                 </div>
               </div>
             </aside>
