--- a/aboutus.html
+++ b/aboutus.html
@@ -68,7 +68,8 @@
               <div class="topbar_element info_element">
                 <i class="fa fa-phone"></i>
                 <h5>Phone Number</h5>
-                <p>+234 803 340 3169</p>
+                <p>+234 907 700 7787
+</p>
               </div>
 
               <div class="topbar_element settings_bar">
@@ -212,7 +213,7 @@
                 Gas, • Telecommunication, • Energy and Utilities, • Facility
                 Maintenance and Building Services
               </p>
-              <a href="#" class="ind_btn ib_dark"><span>Let's Begin</span></a>
+              <a href="/contact_us_1.html" class="ind_btn ib_dark"><span>Let's Begin</span></a>
             </div>
           </div>
         </div>
@@ -359,7 +360,7 @@
             </div>
           </div>
           <div class="col-xl-4 col-md-4 text-right pdt29">
-            <a href="#" class="ind_btn id_dark2"><span>Let's Begin</span></a>
+            <a href="/contact_us_1.html" class="ind_btn id_dark2"><span>Let's Begin</span></a>
           </div>
         </div>
       </div>
@@ -436,7 +437,8 @@
                 <div class="caller">
                   <i class="fal fa-headphones"></i>
                   <span>Talk to us now</span>
-                  <h3>+234 803 340 3169</h3>
+                  <h3>+234 907 700 7787
+</h3>
                 </div>
               </div>
             </aside>
@@ -445,9 +447,9 @@
             <aside class="widget">
               <h3 class="widget_title">Important Links<span>.</span></h3>
               <ul>
-                <li><a href="#">About Company</a></li>
-                <li><a href="#">Latest Projects</a></li>
-                <li><a href="#">Contact Us</a></li>
+               <li><a href="/aboutus.html">About Company</a></li>
+                <li><a href="/project_2.html">Latest Projects</a></li>
+                <li><a href="contact_us_1.html">Contact Us</a></li>
                 
               </ul>
             </aside>
