--- a/contact_us_1.html
+++ b/contact_us_1.html
@@ -69,7 +69,8 @@
               <div class="topbar_element info_element">
                 <i class="fa fa-phone"></i>
                 <h5>Phone Number</h5>
-                <p>+234 803 340 3169</p>
+                <p>+234 907 700 7787
+</p>
               </div>
 
               <div class="topbar_element settings_bar">
@@ -165,7 +166,7 @@
     <section class="page_banner contact_banner">
       <div class="container">
         <div class="col-xl-12 text-center">
-          <h2>Contact 01</h2>
+          <h2>Contact Us</h2>
           <div class="breadcrumbs">
             <a href="index.html">Home</a><i>|</i><span>Contact Us</span>
           </div>
@@ -195,7 +196,8 @@
               <div class="ib5_inner">
                 <h3>Office Hours</h3>
                 <p>
-                  Mon - Fri: 09:00am to 07.00pm <span>Sat - Sun: Off Day</span>
+                  Mondays - Sundays 
+                  <p><span>Everyday</span></p>
                 </p>
                 <!-- <a href="#">Get Directions</a> -->
               </div>
@@ -206,7 +208,8 @@
               <i class="fal fa-phone"></i>
               <div class="ib5_inner">
                 <h3>Call Us</h3>
-                <p>+234 803 340 3169<br />+234 907 700 7787</p>
+                <p>+234 907 700 7787
+
                 <!-- <a href="#">Call Now</a> -->
               </div>
             </div>
@@ -346,7 +349,8 @@
                 <div class="caller">
                   <i class="fal fa-headphones"></i>
                   <span>Talk to us now</span>
-                  <h3>+234 803 340 3169</h3>
+                  <h3>+234 907 700 7787
+</h3>
                 </div>
               </div>
             </aside>
