--- a/project_5.html
+++ b/project_5.html
@@ -68,7 +68,8 @@
               <div class="topbar_element info_element">
                 <i class="fa fa-phone"></i>
                 <h5>Phone Number</h5>
-                <p>+234 803 340 3169</p>
+                <p>+234 907 700 7787
+</p>
               </div>
 
               <div class="topbar_element settings_bar">
@@ -324,7 +325,8 @@ optimal plant availability, and at low cost
                   business days. Or just call us now.
                 </p>
                 <h5>
-                  Call Us: +234 803 340 3169 <br />
+                  Call Us: +234 907 700 7787
+ <br />
                   +234 907 700 7787
                 </h5>
                 <h5>Mail: info@estng.com</h5>
@@ -345,7 +347,7 @@ optimal plant availability, and at low cost
             </div>
           </div>
           <div class="col-xl-3 col-md-4 text-right pdt25">
-            <a href="#" class="ind_btn id_dark2"><span>Let's Begin</span></a>
+            <a href="/contact_us_1.html" class="ind_btn id_dark2"><span>Let's Begin</span></a>
           </div>
         </div>
       </div>
@@ -362,7 +364,8 @@ optimal plant availability, and at low cost
                 <div class="caller">
                   <i class="fal fa-headphones"></i>
                   <span>Talk to us now</span>
-                  <h3>+234 803 340 3169</h3>
+                  <h3>+234 907 700 7787
+</h3>
                 </div>
               </div>
             </aside>
@@ -371,9 +374,9 @@ optimal plant availability, and at low cost
             <aside class="widget">
               <h3 class="widget_title">Important Links<span>.</span></h3>
               <ul>
-                <li><a href="#">About Company</a></li>
-                <li><a href="#">Latest Projects</a></li>
-                <li><a href="#">Contact Us</a></li>
+               <li><a href="/aboutus.html">About Company</a></li>
+                <li><a href="/project_2.html">Latest Projects</a></li>
+                <li><a href="contact_us_1.html">Contact Us</a></li>
               </ul>
             </aside>
           </div>
