--- a/service_details.html
+++ b/service_details.html
@@ -68,7 +68,8 @@
               <div class="topbar_element info_element">
                 <i class="fa fa-phone"></i>
                 <h5>Phone Number</h5>
-                <p>+234 803 340 3169</p>
+                <p>+234 907 700 7787
+</p>
               </div>
 
               <div class="topbar_element settings_bar">
@@ -209,7 +210,7 @@
               <div class="sda_content">
                 <p>
                   The AKPO Expansion Tanks Rehabilitation Project executed by
-                  EST resolved the the problem of rust in the HVAC chilled water
+                  EST resolved the problem of rust in the HVAC chilled water
                   circuits. The rust and consequential murky waters were caused
                   by dissolved air, used in pressurising the replaced tanks.
                   More so, the nuisance popping of pressure relief valves (PRVs)
@@ -323,7 +324,8 @@
                   business days. Or just call us now.
                 </p>
                 <h5>
-                  Call Us: +234 803 340 3169 <br />
+                  Call Us: +234 907 700 7787
+ <br />
                   +234 907 700 7787
                 </h5>
                 <h5>Mail: info@estng.com</h5>
@@ -344,7 +346,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-4 text-right pdt25">
-            <a href="#" class="ind_btn id_dark2"><span>Let's Begin</span></a>
+            <a href="/contact_us_1.html" class="ind_btn id_dark2"><span>Let's Begin</span></a>
           </div>
         </div>
       </div>
@@ -361,7 +363,8 @@
                 <div class="caller">
                   <i class="fal fa-headphones"></i>
                   <span>Talk to us now</span>
-                  <h3>+234 803 340 3169</h3>
+                  <h3>+234 907 700 7787
+</h3>
                 </div>
               </div>
             </aside>
@@ -370,9 +373,9 @@
             <aside class="widget">
               <h3 class="widget_title">Important Links<span>.</span></h3>
               <ul>
-                <li><a href="#">About Company</a></li>
-                <li><a href="#">Latest Projects</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/aboutus.html">About Company</a></li>
+                <li><a href="/project_2.html">Latest Projects</a></li>
+                <li><a href="contact_us_1.html">Contact Us</a></li>
               </ul>
             </aside>
           </div>
