--- a/aboutus.html
+++ b/aboutus.html
@@ -290,7 +290,7 @@
               <div class="singleTeam02">
                 <div class="st2_inner">
                   <img src="images/team/7.jpeg" alt="" />
-                  <h2><a href="#">Onwuzuburuba Chioma</a></h2>
+                  <h2><a href="#">Onwuzurumba, Chioma</a></h2>
                   <span>Business Dev Officer</span>
                 </div>
               </div>
@@ -298,13 +298,13 @@
                 <div class="st2_inner">
                   <img src="images/team/8.jpg" alt="" />
                   <h2><a href="#">Okapara Paul Odinaka</a></h2>
-                  <span>CTO</span>
+                  <span>Electrical Engineer</span>
                 </div>
               </div>
               <div class="singleTeam02">
                 <div class="st2_inner">
                   <img src="images/team/9.jpeg" alt="" />
-                  <h2><a href="#">Momoh O. Yonne</a></h2>
+                  <h2><a href="#">Momoh O. Yvonne</a></h2>
                   <span>Compliance Officer</span>
                 </div>
               </div>
@@ -318,11 +318,11 @@
               <div class="singleTeam02">
                 <div class="st2_inner">
                   <img src="images/team/11.jpg" alt="" />
-                  <h2><a href="#">---- ----- </a></h2>
+                  <h2><a href="#">Ehujuo C. Chimazuru </a></h2>
                   <span>Electrical Traineee</span>
                 </div>
               </div>
-              <div class="singleTeam02">
+              <!-- <div class="singleTeam02">
                 <div class="st2_inner">
                   <img src="images/team/12.jpeg" alt="" />
                   <h2><a href="#">Momoh O. Yonne</a></h2>
@@ -342,7 +342,7 @@
                   <h2><a href="#">---- ----- </a></h2>
                   <span> --- ---</span>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
