--- a/news_details_2.html
+++ b/news_details_2.html
@@ -758,12 +758,12 @@
             <aside class="widget">
               <h3 class="widget_title">Important Links<span>.</span></h3>
               <ul>
-                <li><a href="#">About Company</a></li>
-                <li><a href="#">Latest Projects</a></li>
+                <li><a href="/aboutus.html">About Company</a></li>
+                <li><a href="/project_2.html">Latest Projects</a></li>
                 <li><a href="#">Latest From Blog</a></li>
                 <li><a href="#">Our Testimonials</a></li>
                 <li><a href="#">Our Mission</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/contact_us_1.html">Contact Us</a></li>
                 <li><a href="#">Get a Quot</a></li>
               </ul>
             </aside>
