--- a/project_2.html
+++ b/project_2.html
@@ -96,9 +96,11 @@
                 <li class="">
                   <a href="/">Home</a>
                 </li>
-                <li class="current-menu-item"><a href="#">About</a></li>
-                <li class="menu-item-has-children">
-                  <a href="project_2.html">Projects</a>
+                <li class="">
+                  <a href="aboutus.html">About</a>
+                </li>
+                <li class="current-menu-item">
+                  <a href="#">Projects</a>
                 </li>
 
                 <li class="menu-item-has-children">
