Made some updates

--- a/aboutus.html
+++ b/aboutus.html
@@ -275,7 +275,7 @@
               <div class="singleTeam02">
                 <div class="st2_inner">
                   <img src="images/team/1.jpeg" alt="" />
-                  <h2><a href="#">Asalawudeen Adebimpe</a></h2>
+                  <h2><a href="#">Salawudeen Adebimpe</a></h2>
                   <span>Admin & Finance</span>
                 </div>
               </div>
@@ -355,8 +355,8 @@
           <div class="col-xl-8 col-md-8">
             <div class="cta_left_02">
               <i class="fal fa-headphones-alt"></i>
-              <h6>24/7 We Are available</h6>
-              <h2>We are excited to privide our services</h2>
+              <h6>We Are available 24/7 </h6>
+              <h2>We are excited to offer our services</h2>
             </div>
           </div>
           <div class="col-xl-4 col-md-4 text-right pdt29">
