--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
                     Commissioned Projects
                   </h3>
                   <p>
-                    We have planned, documented, scheduled, tested, adjusted, verified and trained to provide over 75 facilities that operates as as a fully functional system per the owners project requirements
+                    We have planned, documented, scheduled, tested, adjusted, verified and trained to provide over 75 facilities that operates as fully functional systems per the owners project requirements
                   </p>
                 </div>
                 <div class="icon_box_02">
@@ -841,7 +841,7 @@
                     Managed systems
                   </h3>
                   <p>
-                    With many years of experience in providing consulting and managed it services for oil & gas companies, est energy has provided proactive it maintainance and management, IT support and IT strategy to over 30 companies making their technology investments part of their competitive advantage
+                    With many years of experience in providing consulting and management services for oil & gas companies, est energy has provided proactive maintainance and management, IT support and IT strategy to over 30 companies making their technology investments part of their competitive advantage.
                   </p>
                 </div>
               </div>
