--- a/project_5.html
+++ b/project_5.html
@@ -305,7 +305,7 @@ optimal plant availability, and at low cost
                       >HVAC and Fabrication Works</a
                     >
                   </h3>
-                  <p><a href="javascript: void(0);">Industtrials</a></p>
+                  <p><a href="javascript: void(0);">Industrials</a></p>
                 </div>
                 <div class="ltworks">
                   <h3><a href="project_5.html">Thermal Imaging</a></h3>
@@ -321,7 +321,7 @@ optimal plant availability, and at low cost
               <h3 class="widget_title">Have any Questions?</h3>
               <div class="hqw_content">
                 <p>
-                  Please feel free to contact us. We will get back to you with 2
+                  Please feel free to contact us. We will get back to you within 2
                   business days. Or just call us now.
                 </p>
                 <h5>
