--- a/service_3.html
+++ b/service_3.html
@@ -452,8 +452,8 @@
               <h3 class="widget_title">Have any Questions?</h3>
               <div class="hqw_content">
                 <p>
-                  Please feel free to contact us. We will get back to you with 2
-                  business days. Or just call us now.
+                  Please feel free to contact us. We will get back to you within
+                  2 business days. Or just call us now.
                 </p>
                 <h5>Call Us: +(321) 45 678 901 & 902</h5>
                 <h5>Mail: info@webmail.com</h5>
