--- a/project_6.html
+++ b/project_6.html
@@ -188,7 +188,7 @@
                 <div class="row">
                   <div class="col-lg-12 col-md-12">
                     <div class="sda_gl">
-                      <img src="images/hvlv/1.jpeg" alt="" />
+                      <img src="images/hvlv/1.jpg" alt="" />
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-6">
@@ -219,6 +219,43 @@
                   specialist transformers/coils for offshore applications and
                   ROVs
                 </p>
+              </div>
+
+              <div class="sda_gall" style="margin-top: 80px">
+                <div class="row">
+                  <div class="col-lg-6 col-md-6">
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/4.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/5.jpg" alt="" />
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6 col-md-6">
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/6.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/7.jpg" alt="" />
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6 col-md-6">
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/8.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-lg-6 col-md-6">
+                    <div class="sda_gl small">
+                      <img src="images/hvlv/9.jpg" alt="" />
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -287,7 +324,7 @@
                       >HVAC and Fabrication Works</a
                     >
                   </h3>
-                  <p><a href="javascript: void(0);">Industtrials</a></p>
+                  <p><a href="javascript: void(0);">Industrials</a></p>
                 </div>
                 <div class="ltworks">
                   <h3><a href="project_5.html">Thermal Imaging</a></h3>
@@ -303,8 +340,8 @@
               <h3 class="widget_title">Have any Questions?</h3>
               <div class="hqw_content">
                 <p>
-                  Please feel free to contact us. We will get back to you with 2
-                  business days. Or just call us now.
+                  Please feel free to contact us. We will get back to you within
+                  2 business days. Or just call us now.
                 </p>
                 <h5>
                   Call Us: +234 907 700 7787
