--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
               <div class="icon_box_03">
                 <i class="fal fa-campground"></i>
                 <h3>
-                  <a href="service_details.html"
+                  <a href="/project_6.html"
                     >Electrical, Mechanical and Instrumentation</a
                   >
                 </h3>
@@ -876,7 +876,7 @@
               <div class="icon_box_03">
                 <i class="fal fa-industry"></i>
                 <h3>
-                  <a href="service_details.html"
+                  <a href="/project_5.html"
                     >Integrity Inspection and Energy Surveys</a
                   >
                 </h3>
