--- a/project_2.html
+++ b/project_2.html
@@ -199,7 +199,7 @@
                 <div class="singleFolio_03 text-left">
                   <img src="images/thermal/3.webp" alt="" />
                   <div class="folioHover_03">
-                    <h2>Thermal Imaging</h2>
+                    <h2>Integrity Inspection</h2>
                     <a class="mores" href="project_5.html"></a>
                   </div>
                 </div>
