--- a/project_5.html
+++ b/project_5.html
@@ -189,7 +189,7 @@
               <div class="sda_cates">
                 <a href="#">Electrical</a>
               </div>
-              <h2 class="entry_title">Thermal Imaging</h2>
+              <h2 class="entry_title">Integrity Inspection</h2>
               <div class="sda_gall">
                 <div class="row">
                   <div class="col-lg-12 col-md-12">
@@ -308,7 +308,7 @@ optimal plant availability, and at low cost
                   <p><a href="javascript: void(0);">Industrials</a></p>
                 </div>
                 <div class="ltworks">
-                  <h3><a href="project_5.html">Thermal Imaging</a></h3>
+                  <h3><a href="project_5.html">Integity Inspection</a></h3>
                   <p><a href="javascript: void(0);"></a>Electrical</p>
                 </div>
                 <div class="ltworks">
