--- a/service_details.html
+++ b/service_details.html
@@ -347,7 +347,7 @@
                   <p><a href="javascript: void(0);">Industrials</a></p>
                 </div>
                 <div class="ltworks">
-                  <h3><a href="project_5.html">Thermal Imaging</a></h3>
+                  <h3><a href="project_5.html">Integity Inspection</a></h3>
                   <p><a href="javascript: void(0);"></a>Electrical</p>
                 </div>
                 <div class="ltworks">
