--- a/project_6.html
+++ b/project_6.html
@@ -188,7 +188,7 @@
                 <div class="row">
                   <div class="col-lg-12 col-md-12">
                     <div class="sda_gl">
-                      <img src="images/hvlv/1.jpg" alt="" />
+                      <img src="images/hvlv/1.jpeg" alt="" />
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-6">
@@ -327,7 +327,7 @@
                   <p><a href="javascript: void(0);">Industrials</a></p>
                 </div>
                 <div class="ltworks">
-                  <h3><a href="project_5.html">Thermal Imaging</a></h3>
+                  <h3><a href="project_5.html">Integity Inspection</a></h3>
                   <p><a href="javascript: void(0);"></a>Electrical</p>
                 </div>
                 <div class="ltworks">
